--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: "Montserrat", sans-serif; }
+
+blockquote {
+  background: #0a85ff24;
+  border-left: 4px solid #0066cc;
+  border-radius: 4px;
+  color: #666;
+  margin: 20px 0;
+  padding: 1px 20px;
+  p{
+    font-size: 14px;
+    display: block;
+    margin-block-start: 1em !important;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+  }
+}
