feat: init project

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   display: flex;
   markdown{
+    overflow: auto;
     font-family: "Montserrat", sans-serif;
     border-left: 1px solid #EEE;
     padding: 20px;
