feat: accept mermaid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="content">
   <ace [mode]="'markdown'" [theme]="'monokai'" [(value)]="markdown"></ace>
-  <markdown lineNumbers class="variable-binding" [data]="markdown"></markdown>
+  <markdown lineNumbers mermaid class="variable-binding" [data]="markdown"></markdown>
 </div>
